--- a/BankApp/MainWindow.xaml
+++ b/BankApp/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:regions="http://prismlibrary.com/"
         mc:Ignorable="d"
-        Title="Bank of Denmark" Height="450" Width="800">
+        Title="Bank of Denmark" Height="450" Width="800" ResizeMode="CanMinimize">
     <Grid>
         <ContentControl regions:RegionManager.RegionName="MainRegion" />
     </Grid>
