--- a/BankApp/Views/CustomerView.xaml
+++ b/BankApp/Views/CustomerView.xaml
@@ -20,13 +20,33 @@
             </Grid.RowDefinitions>
 
             <Label Grid.Column="1" Grid.Row="0" HorizontalAlignment="Right" Content="Search:"/>
+
             <TextBox Grid.Column="2" Grid.Row="0" Margin="0 2 0 2" TextAlignment="Right" Text="{Binding Model.Filter, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+
             <ListBox Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" ItemsSource="{Binding Model.FilteredCustomers}" SelectedItem="{Binding Model.SelectedCustomer, Mode=TwoWay}">
                 <ListBox.ItemTemplate>
                     <DataTemplate DataType="models:Customer">
-                        <TextBlock>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="700"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="5"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+
+                            <TextBlock Grid.Column ="0" Margin="0 0 10 0">
                                 <Run Text="{Binding FullName}"/>
-                        </TextBlock>
+                            </TextBlock>
+
+                            <Button Grid.Column ="1" HorizontalAlignment="Center" BorderThickness="0" Background="Transparent">
+                                <Path Data="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z" Fill="Black" />
+                            </Button>
+
+                            <Button Grid.Column="3" HorizontalAlignment="Center" BorderThickness="0" Background="Transparent">
+                                <Image MaxHeight="18" Source="\Icons\icon_delete.png"/>
+                            </Button>
+
+                        </Grid>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
@@ -50,6 +70,7 @@
             <Button Grid.Column="2" Margin="2 2 2 2" Command="{Binding DeleteCustomerCommand}">Delete customer</Button>
             <Button Grid.Column="3" Margin="2 2 2 2" Command="{Binding ShowAccountCommand}">Show account</Button>
         </Grid>
+
 
         <!--<Grid Background="Pink">
 
