--- a/BankApp/Views/AccountView.xaml
+++ b/BankApp/Views/AccountView.xaml
@@ -22,11 +22,11 @@
             </Grid.RowDefinitions>
 
             <Label Grid.Column="1" Grid.Row="0" Content="User"/>
-            <Label Grid.Column="2" Grid.Row="0" Content="{Binding Model.FullName}"/>
+            <Label Grid.Column="2" Grid.Row="0" Content="{Binding SelectedCustomer.FullName}"/>
             <Label Grid.Column="1" Grid.Row="1" Content="State"/>
-            <Label Grid.Column="2" Grid.Row="1" Content="{Binding Model.Account.State}"/>
+            <Label Grid.Column="2" Grid.Row="1" Content="{Binding SelectedCustomer.Account.State}"/>
             <Label Grid.Column="1" Grid.Row="2" Content="Balance"/>
-            <Label Grid.Column="2" Grid.Row="2" Content="{Binding Model.Account.Balance}"/>
+            <Label Grid.Column="2" Grid.Row="2" Content="{Binding SelectedCustomer.Account.Balance}"/>
             <Button Grid.Row="0" Grid.Column="3" Command="{Binding EditCustomerCommand}">Edit</Button>
         </Grid>
 
@@ -45,7 +45,7 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
-            <TextBox Grid.Column="1" Grid.ColumnSpan="2" Margin="2 2 2 2" TextAlignment="Right" Text="{Binding Model.Account.Amount}"/>
+            <TextBox Grid.Column="1" Grid.ColumnSpan="2" Margin="2 2 2 2" TextAlignment="Right" Text="{Binding SelectedCustomer.Account.Amount}"/>
             <Button Grid.Column="1" Grid.Row="1" Margin="2 2 3 2" Command="{Binding DepositCommand}">Deposit</Button>
             <Button Grid.Column="2" Grid.Row="1" Margin="3 2 2 2" Command="{Binding WithDrawCommand}">Withdraw</Button>
         </Grid>
