--- a/BankApp/Views/CustomerInfoView.xaml
+++ b/BankApp/Views/CustomerInfoView.xaml
@@ -28,7 +28,7 @@
             </Grid.RowDefinitions>
 
             <Label Grid.Column="1" Grid.Row="0" Content="ID"/>
-            <TextBox Grid.Column="2" Grid.Row="0" Margin="0 2 0 2" Text="{Binding SelectedCustomer.Id, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}"/>
+            <TextBox Grid.Column="2" Grid.Row="0" Margin="0 2 0 2" Text="{Binding SelectedCustomer.Id, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}" IsEnabled="False"/>
             <Label Grid.Column="1" Grid.Row="1" Content="Social security number"/>
             <TextBox Grid.Column="2" Grid.Row="1" Margin="0 2 0 2" Text="{Binding SelectedCustomer.SocialSecurityNumber, UpdateSourceTrigger=PropertyChanged}"/>
             <Label Grid.Column="1" Grid.Row="2" Content="Full name"/>
@@ -49,18 +49,19 @@
 
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="10"/>
-                <ColumnDefinition Width="60"/>
-                <ColumnDefinition Width="90"/>
                 <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="60"/>
+                <ColumnDefinition Width="60"/>
+                <ColumnDefinition Width="10"/>
 
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
-            <Button Grid.Column="1" Margin="2 2 2 2" ToolTip="Save changes and return" Command="{Binding GoBackCommand}">Go back</Button>
-            <Button Grid.Column="2" Margin="2 2 2 2" ToolTip="Discard changes and return" Command="{Binding SaveChangesCommand}">Save changes</Button>
+            <Button Grid.Column="2" Margin="2 2 2 2" ToolTip="Discard changes and return" Command="{Binding CancelCommand}">Cancel</Button>
+            <Button Grid.Column="1" Margin="2 2 2 2" ToolTip="Save changes and return" Command="{Binding OkCommand}">Ok</Button>
+            
         </Grid>
 
     </StackPanel>
