--- a/BankApp/Views/CustomerView.xaml
+++ b/BankApp/Views/CustomerView.xaml
@@ -1,98 +1,140 @@
-﻿<UserControl x:Class="BankApp.Views.CustomerView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:prism="http://prismlibrary.com/"
-        xmlns:models="clr-namespace:BankApp.Models"
-        prism:ViewModelLocator.AutoWireViewModel="True">
+﻿<UserControl
+    x:Class="BankApp.Views.CustomerView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:models="clr-namespace:BankApp.Models"
+    xmlns:prism="http://prismlibrary.com/"
+    prism:ViewModelLocator.AutoWireViewModel="True">
     <StackPanel>
-        <Label Content="Bank of Denmark" FontSize="32" HorizontalAlignment="Center"/>
-        <TextBox Padding="10" BorderThickness="0" IsEnabled="False"/>
+        <Label
+            HorizontalAlignment="Center"
+            Content="Bank of Denmark"
+            FontSize="32" />
+        <TextBox
+            Padding="10"
+            BorderThickness="0"
+            IsEnabled="False" />
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="10"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="120"/>
-                <ColumnDefinition Width="10"/>
+                <ColumnDefinition Width="10" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="120" />
+                <ColumnDefinition Width="10" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="200"/>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="200" />
             </Grid.RowDefinitions>
-
-            <Label Grid.Column="1" Grid.Row="0" HorizontalAlignment="Right" Content="Search:"/>
-
-            <TextBox Grid.Column="2" Grid.Row="0" Margin="0 2 0 2" TextAlignment="Right" Text="{Binding Model.Filter, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-
-            <ListBox Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" ItemsSource="{Binding Model.FilteredCustomers}" SelectedItem="{Binding Model.SelectedCustomer, Mode=TwoWay}">
+            <Label
+                Grid.Row="0"
+                Grid.Column="1"
+                HorizontalAlignment="Right"
+                Content="Search:" />
+            <TextBox
+                Grid.Row="0"
+                Grid.Column="2"
+                Margin="0,2,0,2"
+                Text="{Binding Model.Filter, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                TextAlignment="Right" />
+            <ListBox
+                Grid.Row="1"
+                Grid.Column="1"
+                Grid.ColumnSpan="2"
+                ItemsSource="{Binding Model.FilteredCustomers}"
+                SelectedItem="{Binding Model.SelectedCustomer, Mode=TwoWay}">
                 <ListBox.ItemTemplate>
-                    <DataTemplate DataType="models:Customer"> 
+                    <DataTemplate DataType="models:Customer">
                         <Grid>
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="700"/>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="5"/>
-                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="680" />
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
-
-                            <TextBlock Grid.Column ="0" Margin="0 0 10 0" HorizontalAlignment="Stretch" >
-                                <Run Text="{Binding FullName}"/>
+                            <TextBlock
+                                Grid.Column="0"
+                                Margin="0,0,10,0"
+                                HorizontalAlignment="Stretch">
+                                <Run FontSize="16" Text="{Binding FullName}" />
                             </TextBlock>
-
-                            <Button Grid.Column="1" BorderThickness="0" Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBox}}, Path=DataContext.ShowAccountCommand}">
+                            <Button
+                                Grid.Column="1"
+                                Background="Transparent"
+                                BorderThickness="0"
+                                Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ListBox}}, Path=DataContext.ShowAccountCommand}"
+                                Opacity="0.7"
+                                ToolTip="Account">
                                 <Button.Style>
-
                                     <Style TargetType="{x:Type Button}">
-                                        <Setter Property="Visibility" Value="Hidden"/>
+                                        <Setter Property="Visibility" Value="Hidden" />
                                         <Style.Triggers>
-                                            <DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBoxItem}},Path=IsSelected}" Value="True">
-                                                <Setter Property="Visibility" Value="Visible"/>
+                                            <DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ListBoxItem}}, Path=IsSelected}" Value="True">
+                                                <Setter Property="Visibility" Value="Visible" />
                                             </DataTrigger>
                                         </Style.Triggers>
                                     </Style>
                                 </Button.Style>
-                                <Image x:Name="MyImage" MaxHeight="18" Source="\Icons\icon_edit.png"/>
+                                <Path Data="M21,18V19A2,2 0 0,1 19,21H5C3.89,21 3,20.1 3,19V5A2,2 0 0,1 5,3H19A2,2 0 0,1 21,5V6H12C10.89,6 10,6.9 10,8V16A2,2 0 0,0 12,18M12,16H22V8H12M16,13.5A1.5,1.5 0 0,1 14.5,12A1.5,1.5 0 0,1 16,10.5A1.5,1.5 0 0,1 17.5,12A1.5,1.5 0 0,1 16,13.5Z" Fill="Black" />
                             </Button>
-
-                            <Button Grid.Column="3" BorderThickness="0" Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBox}}, Path=DataContext.DeleteCustomerCommand}">
+                            <Button
+                                Grid.Column="2"
+                                Background="Transparent"
+                                BorderThickness="0"
+                                Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ListBox}}, Path=DataContext.ShowCustomerInfoCommand}"
+                                Opacity="0.7"
+                                ToolTip="Information">
                                 <Button.Style>
-
                                     <Style TargetType="{x:Type Button}">
-                                        <Setter Property="Visibility" Value="Hidden"/>
+                                        <Setter Property="Visibility" Value="Hidden" />
                                         <Style.Triggers>
-                                            <DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBoxItem}},Path=IsSelected}" Value="True">
-                                                <Setter Property="Visibility" Value="Visible"/>
+                                            <DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ListBoxItem}}, Path=IsSelected}" Value="True">
+                                                <Setter Property="Visibility" Value="Visible" />
                                             </DataTrigger>
                                         </Style.Triggers>
                                     </Style>
                                 </Button.Style>
-                                <Image MaxHeight="18" Source="\Icons\icon_delete.png"/>
+                                <Path Data="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z" Fill="Black" />
                             </Button>
-
+                            <Button
+                                Grid.Column="3"
+                                Background="Transparent"
+                                BorderThickness="0"
+                                Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ListBox}}, Path=DataContext.DeleteCustomerCommand}"
+                                Opacity="0.7"
+                                ToolTip="Delete">
+                                <Button.Style>
+                                    <Style TargetType="{x:Type Button}">
+                                        <Setter Property="Visibility" Value="Hidden" />
+                                        <Style.Triggers>
+                                            <DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ListBoxItem}}, Path=IsSelected}" Value="True">
+                                                <Setter Property="Visibility" Value="Visible" />
+                                            </DataTrigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </Button.Style>
+                                <Path Data="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z" Fill="Black" />
+                            </Button>
                         </Grid>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
         </Grid>
-
-        <TextBox Padding="10" BorderThickness="0" IsEnabled="False"/>
-
+        <TextBox BorderThickness="0" IsEnabled="False" />
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="10"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="10"/>
+                <ColumnDefinition Width="10" />
+                <ColumnDefinition Width="120" />
+                <ColumnDefinition Width="10" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="*" />
             </Grid.RowDefinitions>
-
-            <Button Grid.Column="1" Margin="2 2 2 2" Command="{Binding AddCustomerCommand}">Add customer</Button>
-            <Button Grid.Column="2" Margin="2 2 2 2" Command="{Binding DeleteCustomerCommand}">Delete customer</Button>
-            <Button Grid.Column="3" Margin="2 2 2 2" Command="{Binding ShowAccountCommand}">Show account</Button>
-            <Button Grid.Column="4" Margin="2 2 2 2" Command="{Binding ShowCustomerInfoCommand}">Show customer info</Button>
+            <Button
+                Grid.Column="1"
+                Margin="2,2,2,2"
+                Command="{Binding AddCustomerCommand}">
+                Add new customer
+            </Button>
         </Grid>
     </StackPanel>
 </UserControl>
