--- a/BankApp/Views/AccountView.xaml
+++ b/BankApp/Views/AccountView.xaml
@@ -1,67 +1,120 @@
-﻿<UserControl x:Class="BankApp.Views.AccountView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:prism="http://prismlibrary.com/"
-        prism:ViewModelLocator.AutoWireViewModel="True">
+﻿<UserControl
+    x:Class="BankApp.Views.AccountView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:prism="http://prismlibrary.com/"
+    prism:ViewModelLocator.AutoWireViewModel="True">
     <StackPanel>
-        <Label Content="Bank of Denmark" FontSize="32" HorizontalAlignment="Center"/>
-        <TextBox Padding="10" BorderThickness="0" IsEnabled="False"/>
+        <Label
+            HorizontalAlignment="Center"
+            Content="Bank of Denmark"
+            FontSize="32" />
+        <TextBox
+            Padding="10"
+            BorderThickness="0"
+            IsEnabled="False" />
 
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="10"/>
-                <ColumnDefinition Width="55"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="10"/>
+                <ColumnDefinition Width="10" />
+                <ColumnDefinition Width="55" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="10" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
-            <Label Grid.Column="1" Grid.Row="0" Content="User"/>
-            <Label Grid.Column="2" Grid.Row="0" Content="{Binding SelectedCustomer.FullName}"/>
-            <Label Grid.Column="1" Grid.Row="1" Content="State"/>
-            <Label Grid.Column="2" Grid.Row="1" Content="{Binding SelectedCustomer.Account.State}"/>
-            <Label Grid.Column="1" Grid.Row="2" Content="Balance"/>
-            <Label Grid.Column="2" Grid.Row="2" Content="{Binding SelectedCustomer.Account.Balance}"/>
+            <Label
+                Grid.Row="0"
+                Grid.Column="1"
+                Content="User" />
+            <Label
+                Grid.Row="0"
+                Grid.Column="2"
+                Content="{Binding SelectedCustomer.FullName}" />
+            <Label
+                Grid.Row="1"
+                Grid.Column="1"
+                Content="State" />
+            <Label
+                Grid.Row="1"
+                Grid.Column="2"
+                Content="{Binding SelectedCustomer.Account.State}" />
+            <Label
+                Grid.Row="2"
+                Grid.Column="1"
+                Content="Balance" />
+            <Label
+                Grid.Row="2"
+                Grid.Column="2"
+                Content="{Binding SelectedCustomer.Account.Balance}" />
         </Grid>
 
-        <TextBox Padding="10" BorderThickness="0" IsEnabled="False"/>
+        <TextBox
+            Padding="10"
+            BorderThickness="0"
+            IsEnabled="False" />
 
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="10"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="10"/>
+                <ColumnDefinition Width="10" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="10" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
-            <TextBox Grid.Column="1" Grid.ColumnSpan="2" Margin="2 2 2 2" TextAlignment="Right" Text="{Binding SelectedCustomer.Account.Amount}"/>
-            <Button Grid.Column="1" Grid.Row="1" Margin="2 2 3 2" Command="{Binding DepositCommand}">Deposit</Button>
-            <Button Grid.Column="2" Grid.Row="1" Margin="3 2 2 2" Command="{Binding WithDrawCommand}">Withdraw</Button>
+            <TextBox
+                Grid.Column="1"
+                Grid.ColumnSpan="2"
+                Margin="2,2,2,2"
+                Text="{Binding SelectedCustomer.Account.Amount}"
+                TextAlignment="Right" />
+            <Button
+                Grid.Row="1"
+                Grid.Column="1"
+                Margin="2,2,3,2"
+                Command="{Binding DepositCommand}">
+                Deposit
+            </Button>
+            <Button
+                Grid.Row="1"
+                Grid.Column="2"
+                Margin="3,2,2,2"
+                Command="{Binding WithDrawCommand}">
+                Withdraw
+            </Button>
         </Grid>
 
-        <TextBox Padding="10" BorderThickness="0" IsEnabled="False"/>
+        <TextBox
+            Padding="10"
+            BorderThickness="0"
+            IsEnabled="False" />
 
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="10"/>
-                <ColumnDefinition Width="60"/>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="10" />
+                <ColumnDefinition Width="60" />
+                <ColumnDefinition Width="*" />
 
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
-            <Button Grid.Column="1" Margin="2 2 2 2" Command="{Binding GoBackCommand}">Go back</Button>
+            <Button
+                Grid.Column="1"
+                Margin="2,2,2,2"
+                Command="{Binding GoBackCommand}">
+                Go back
+            </Button>
         </Grid>
 
     </StackPanel>
