--- a/BankApp/Views/CustomerView.xaml
+++ b/BankApp/Views/CustomerView.xaml
@@ -35,7 +35,7 @@
                 Grid.Row="0"
                 Grid.Column="2"
                 Margin="0,2,0,2"
-                Text="{Binding Model.Filter, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                Text="{Binding Filter, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                 TextAlignment="Right" />
             <Button
                 Grid.Row="0"
@@ -49,8 +49,8 @@
                 Grid.Row="1"
                 Grid.Column="1"
                 Grid.ColumnSpan="3"
-                ItemsSource="{Binding Model.FilteredCustomers}"
-                SelectedItem="{Binding Model.SelectedCustomer, Mode=TwoWay}">
+                ItemsSource="{Binding Customers}"
+                SelectedItem="{Binding SelectedCustomer, Mode=TwoWay}">
                 <ListBox.ItemTemplate>
                     <DataTemplate DataType="models:Customer">
                         <Grid>
