--- a/BankApp/Views/AccountView.xaml
+++ b/BankApp/Views/AccountView.xaml
@@ -42,7 +42,7 @@
             <Label
                 Grid.Row="1"
                 Grid.Column="2"
-                Content="{Binding SelectedCustomer.Account.State}" />
+                Content="{Binding AccountWrapper.State}" />
             <Label
                 Grid.Row="2"
                 Grid.Column="1"
@@ -50,7 +50,7 @@
             <Label
                 Grid.Row="2"
                 Grid.Column="2"
-                Content="{Binding SelectedCustomer.Account.Balance}" />
+                Content="{Binding AccountWrapper.Balance}" />
         </Grid>
 
         <TextBox
@@ -75,7 +75,7 @@
                 Grid.Column="1"
                 Grid.ColumnSpan="2"
                 Margin="2,2,2,2"
-                Text="{Binding SelectedCustomer.Account.Amount}"
+                Text="{Binding AccountWrapper.Amount}"
                 TextAlignment="Right" />
             <Button
                 Grid.Row="1"
