--- a/BankApp/Views/CustomerView.xaml
+++ b/BankApp/Views/CustomerView.xaml
@@ -133,7 +133,8 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="10" />
                 <ColumnDefinition Width="120" />
-                <ColumnDefinition Width="10" />
+                <ColumnDefinition Width="120" />
+                <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
@@ -143,6 +144,12 @@
                 Margin="2,2,2,2"
                 Command="{Binding AddCustomerCommand}">
                 Add new customer
+            </Button>
+            <Button
+                Grid.Column="2"
+                Margin="2,2,2,2"
+                Command="{Binding FindMostValuedCustomerCommand}">
+                Find Best Customer
             </Button>
         </Grid>
     </StackPanel>
